--- a/src/main/webapp/client/index.html
+++ b/src/main/webapp/client/index.html
@@ -35,7 +35,8 @@
 
 <div id="content-area" class="col-md-9" role="main">
     <div id="content">
-        <h2><span>This is a small demo app. When logged in, press show domain to access the private API endpoint.</span></h2>
+        <h2><span>This is a small demo app. When logged in, press show domain to access the private API endpoint.</span>
+        </h2>
         <a href="" ng-click="logout()">Sign Out</a>
         <button type="submit" data-ng-click="showDomain()">Show Domain</button>
         <table class="table" ng-cloak data-ng-show="domain.length > 0">
