--- a/src/main/webapp/client/index.html
+++ b/src/main/webapp/client/index.html
@@ -39,16 +39,16 @@
             <p>Software Security API Client</p>
         </h1>
         <h2>
-            <p>Press "Show Domain Info" to perform a request to the private API endpoint. The response will be displayed below</p>
+            <p>Press "Show Public Endpoint Response" or "Show Private Endpoint Response" to trigger a call to either of the API endpoints. The response will be displayed below</p>
         </h2>
         <h3>
             <p>Use the "Log in" & "Log out" button to test authorized and unauthorized requests respectively</p>
         </h3>
-
-        <button type="submit" data-ng-click="showDomain()">Show Domain Info</button>
-        <button type="submit" ng-cloak data-ng-show="!token" data-ng-click="login()">Log in</button>
-        <button type="submit" ng-cloak data-ng-show="token.length > 0" data-ng-click="logout()">Sign Out</button>
-        <h4 ng-cloak data-ng-show="responseContent.length > 0">JSON Response content: {{responseContent}}</h4>
+        <button type="submit" data-ng-click="showPublicEndpointResponse()">Show Public Endpoint Response</button>
+        <button type="submit" data-ng-click="showPrivateEndpointResponse()">Show Private Endpoint Response</button>
+        <button type="submit" ng-cloak data-ng-show="!token" data-ng-click="login()">Log In</button>
+        <button type="submit" ng-cloak data-ng-show="token.length > 0" data-ng-click="logout()">Log Out</button>
+        <h4 ng-style="textColor" ng-cloak data-ng-show="responseContent.length > 0">JSON {{endpoint}} Response content: {{responseContent}}</h4>
     </div>
 </div>
 </body>
