updated readme, client webapp response display alteration

--- a/src/main/webapp/client/index.html
+++ b/src/main/webapp/client/index.html
@@ -51,7 +51,7 @@
         <button type="submit" data-ng-click="showPrivateEndpointResponse()">Show Private Endpoint Response</button>
         <button type="submit" ng-cloak data-ng-show="!token" data-ng-click="login()">Log In</button>
         <button type="submit" ng-cloak data-ng-show="token.length > 0" data-ng-click="logout()">Log Out</button>
-        <h4 ng-style="textColor" ng-cloak data-ng-show="responseContent.length > 0">JSON {{endpoint}} Response content:
+        <h4 ng-style="textColor" ng-cloak data-ng-show="responseContent.length > 0">JSON Response content:
             {{responseContent}}</h4>
     </div>
 </div>
